-- altered module-info.java to run project properly -- fixed toString() in WeekInfo.java so that it no longer calls invalid getFirst() and getLast() methods -- moved GridPane instantiation in monthViewUI.java to its own method. Also added functionality to display day numbers on the calendar.